TN: Add Spring Security with form login

--- a/src/main/webapp/scripts/app/fragments/nav.html
+++ b/src/main/webapp/scripts/app/fragments/nav.html
@@ -24,6 +24,7 @@
                 </li>
 
                 <li><a href="#!/vets">Vets</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </div>
