TN: Add authentication with Github Oauth2

--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -16,5 +16,8 @@
             <div><label> Password: <input type="password" name="password"/> </label></div>
             <div><input type="submit" value="Sign In"/></div>
         </form>
+        <div>
+            Login with <a href="/github/authorize">Github</a>
+        </div>
     </body>
 </html>
